<?xml version="1.0" encoding="utf-8"?><!--<FrameLayout >-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMedicine">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/con"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText"
            android:layout_width="336dp"
            android:layout_height="56dp"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:lines="1"
            android:singleLine="true"
            android:layout_marginStart="27dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="27dp"
            android:hint="@string/medicine_name"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="107dp"
            android:layout_height="59dp"
            android:layout_marginStart="84dp"
            android:layout_marginTop="44dp"
            android:onClick="openCamera"
            android:text="@string/select_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputEditText" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="100dp"
            android:contentDescription="@string/medicine_image_preview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputEditText" />

        <Button
            android:id="@+id/button5"
            android:layout_width="264dp"
            android:layout_height="55dp"
            android:layout_marginStart="74dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="74dp"
            android:onClick="showDays"
            android:text="@string/select_days"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="44dp"
            android:minHeight="48dp"
            android:onClick="billsNum"
            android:text="@string/number_of_pills_in_all_days_is_equal"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button5" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
